* Mon Jun 11 2007 Jesse Keating <jkeating@redhat.com>
- Add a install target to make (Trac #37)
- Enable the source repo in yum configs (Trac #47)
- Use universal newlines in getting process output (Trac #44)
- Fix logging of broken deps (Trac #39)

* Fri May 25 2007 Jesse Keating <jkeating@redhat.com>
- Handle the cdsize variable correctly
- More fixes for cached download stuff
- Fix default CD size storing

* Thu May 24 2007 Jesse Keating <jkeating@redhat.com>
- Use a package checksum to verify cached download
- Use the right flavor in the Everything configs

* Wed May 23 2007 Jesse Keating <jkeating@redhat.com>
- Commit config files used for producing Fedora 7
- Default pungi.conf file to using Fedora 7 stuff

* Tue May 15 2007 Jesse Keating <jkeating@redhat.com>
- Don't quote ISO label, not running mkisofs in shell
- Apply sparc patches (spot)
- Fix cached downloads comparing correctly
- Shorten 'development' to 'devel' in default config, more space for mkisofs
- Handle config file missing better (jgranado)

* Fri Apr 06 2007 Jesse Keating <jkeating@redhat.com>
- Fix comments in config file

* Mon Apr 02 2007 Jesse Keating <jkeating@redhat.com>
- Remove incompatible fc6 config files
- Update default config file with comments / new options
- Update comps file

* Mon Mar 26 2007 Jesse Keating <jkeating@redhat.com>
- Enable source iso building again.

* Fri Mar 23 2007 Jesse Keating <jkeating@redhat.com>
- Don't try a rescue if the script doesn't exist (prarit)

* Thu Mar 22 2007 Jesse Keating <jkeating@redhat.com>
- Pass flavor off to buildinstall if it is set (wwoods)

* Fri Mar 16 2007 Jesse Keating <jkeating@redhat.com>
- Fix a logic flaw in the depsolving loop

* Thu Mar 15 2007 Jesse Keating <jkeating@redhat.com>
- Use yum's built in exclude handling
- Use yum's built in conditional handling for things from comps
- Do excludes before group handling.
- Get all potential matches for deps, let install time figure
  the best one to use.